--- a/classify.html
+++ b/classify.html
@@ -47,7 +47,7 @@
                 <div class="navbar-collapse collapse">              
           <div class="menu">
             <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation"><a href="index.html">Home</a></li>
+              <li role="presentation"><a href="index.html">Secured Transactions</a></li>
                      <li role="presentation"><a href="litigationinvesting.html">Litigation Investing</a></li>
               <li role="presentation"><a href="#mission">Mission Statement</a></li>
               <li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
@@ -99,10 +99,10 @@
         <div class="card h-100">
           <div class="card-body">
             <h4 class="card-title">It's a physical thing, but I can't really move it.</h4>
-            <p class="card-text">If it is a house, or something that can't be moved without causing damage, it's probably a Fixture. If it is more similar to a </p>
+            <p class="card-text">If it is a house, or something that can't be moved without causing damage, it's probably a Fixture. If it is more similar to a to a mineral in the ground like oil, rare earth metals, then you might have what article 9 calls "as-extracted collateral" </p>
           </div>
           <div class="card-footer">
-            <a href="case2.html" class="btn btn-primary">Find Out More!</a>
+            <a href="case2.html" class="btn btn-primary">I think it might be a fixture</a>
           </div>
            <div class="card-footer">
             <a href="case2docs.html" class="btn btn-primary">Download Court Documents</a>
