--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                         <span class="icon-bar"></span>
                     </button>
                    <div class="navbar-brand">
-						<a href="index.html"><h1>Ailanthus</h1></a>
+						<a href="index.html"><h1>Codified</h1></a>
 					</div>
                 </div>				
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation"><a href="index.html">Home</a></li>
+							<li role="presentation"><a href="index.html">Secured Transactions</a></li>
              				 <li role="presentation"><a href="litigationinvesting.html">Litigation Investing</a></li>
 							<li role="presentation"><a href="#mission">Mission Statement</a></li>
 							<li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
@@ -157,11 +157,31 @@
 					<p>Article 9 lays out specific rules for securing a transaction; whether you are a lender, a business, or just someone who wants to get a better rate on their personal loan, Article 9 can help you.
 				</p>
 				</div>
+					<h2>There are many parts of Article 9, but we focus on the important ones. We make sure that your security interest is legitimate and enforceable. In order to do so we must: Classify Your Collateral, Attach Your Collateral, and then Perfect Your Security Interest.</h2>
 		<br>
 	</br>
 	<br>
 </br>
-				<div class="col-md-12 col-sm-12 col-xs-12">
+
+<div class="container">
+				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+					<i class="fa fa-book"></i>
+					<h3>Classify Your Collateral</h3>
+					<p>Article 9 uses specific and counerintuitive words and definitions. We can help you figure out exactly what it is your trying to use as collateral.</p>
+				</div>
+				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+					<i class="fa fa-paperclip"></i>
+					<h3>Attaching Your Collateral</h3>
+					<p>Once you've classified your collateral, you have to make sure that it attaches to the security agreement. This makes it clear what exactly you have used as collateral.</p>
+				</div>
+				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
+					<i class="fa fa-plus-square" aria-hidden="true"></i>
+					<h3>Perfecting Your Security Interest</h3>
+					<p>Once you've classified your collateral and attached it, you need to make sure that your interest is perfected. If it is perfected, this will give you the best chance of ensuring that it is enforceable in the case of bankruptcy.</p>
+				</div>
+			</div>
+		</div>
+				<div class="col-md-6 col-sm-6 col-xs-6">
 					<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6">
