--- a/index.html
+++ b/index.html
@@ -153,39 +153,45 @@
 		<div class="container">
 			<div class="text-center">
 				<h2>Securing your transaction </h2>
-				<div class="col-md-10 col-md-offset-1">
+				<div class="col-md-12 col-md-offset-1">
 					<p>Article 9 lays out specific rules for securing a transaction; whether you are a lender, a business, or just someone who wants to get a better rate on their personal loan, Article 9 can help you.
 				</p>
 				</div>
-					<h2>There are many parts of Article 9, but we focus on the important ones. We make sure that your security interest is legitimate and enforceable. In order to do so we must: Classify Your Collateral, Attach Your Collateral, and then Perfect Your Security Interest.</h2>
+				<div class="container">
+			<div class="text-center">
+				<h2>We make sure that your security interest is legitimate and enforceable. In order to do so we must: Classify Your Collateral, Create Your Security Agreement and Attach Your Collateral, and then Perfect Your Security Interest.</h2>
+			</div>
 		<br>
 	</br>
 	<br>
 </br>
 
 <div class="container">
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<i class="fa fa-book"></i>
 					<h3>Classify Your Collateral</h3>
 					<p>Article 9 uses specific and counerintuitive words and definitions. We can help you figure out exactly what it is your trying to use as collateral.</p>
 				</div>
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
 					<i class="fa fa-paperclip"></i>
-					<h3>Attaching Your Collateral</h3>
-					<p>Once you've classified your collateral, you have to make sure that it attaches to the security agreement. This makes it clear what exactly you have used as collateral.</p>
+					<h3>Create Your Security Agreement</h3>
+					<p>Once you've classified your collateral, you have to make sure that you have a security agreement and that your collateral attaches to the security agreement. This makes it clear what exactly you have used as collateral.</p>
 				</div>
-				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
+				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
 					<h3>Perfecting Your Security Interest</h3>
 					<p>Once you've classified your collateral and attached it, you need to make sure that your interest is perfected. If it is perfected, this will give you the best chance of ensuring that it is enforceable in the case of bankruptcy.</p>
 				</div>
 			</div>
 		</div>
-				<div class="col-md-6 col-sm-6 col-xs-6">
+				<div class="col-md-4">
 					<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6">
-					<div class="gamp-btn"><a href="createsi.html">Create Your Security Interest</a></div>
+					<div class="btn-gamp"><a href="createsi.html">Create Your Security Agreement</a></div>
+				</div>
+					<div class="col-lg-6 col-md-6 col-sm-6">
+					<div class="btn-gamp"><a href="createsi.html">Perfect Your Security Interest</a></div>
 				</div>
 				
 			</div>	
