--- a/index.html
+++ b/index.html
@@ -184,17 +184,28 @@
 				</div>
 			</div>
 		</div>
+		<br>
+		</br>
 				<div class="col-md-4">
-					<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div>
+					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
+			<div class="card-footer">
+            <a href="classify.html" class="btn btn-primary">Classify Your Collateral</a>
+          </div>
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6">
-					<div class="btn-gamp"><a href="createsi.html">Create Your Security Agreement</a></div>
+				<div class="col-md-4">
+					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
+			<div class="card-footer">
+            <a href="classify.html" class="btn btn-primary">Create Your Security Agreement</a>
+          </div>
 				</div>
-					<div class="col-lg-6 col-md-6 col-sm-6">
-					<div class="btn-gamp"><a href="createsi.html">Perfect Your Security Interest</a></div>
+				<div class="col-md-4">
+					<!--<div class="btn-gamp"><a href="classify.html">Classify Your Collateral</a></div> -->
+			<div class="card-footer">
+            <a href="classify.html" class="btn btn-primary">Perfect Your Security Interest</a>
+          </div>
 				</div>
 				
-			</div>	
+			
 		</div>			
 	</div>
 	<hr>
