--- a/classify.html
+++ b/classify.html
@@ -52,7 +52,6 @@
               <li role="presentation"><a href="#mission">Mission Statement</a></li>
               <li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
               <li role="presentation"><a href="about.html">About Us</a></li>
-              <li role="presentation"><a href="gallery.html">Cases</a></li>
               <li role="presentation"><a href="contact.html">Contact</a></li>           
             </ul>
           </div>
@@ -88,7 +87,7 @@
             <a href="case1.html" class="btn btn-primary">I think I might have Goods.</a>
           </div>
            <div class="card-footer">
-            <a href="case1docs.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
+            <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
           </div>
         </div>
       </div>
