--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,6 @@
 							<li role="presentation"><a href="index.html#mission">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Business Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
-							<li role="presentation"><a href="gallery.html">Cases</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
 					</div>
@@ -62,13 +61,14 @@
     </header><!--/header-->	
 	<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<h4>Contact Us</h4>					
+				<h2>Contact Us</h2>				
 				<br></br>
+                <h2>We realize a lot of these questions are difficult, so we have lawyers standing by to help. You can call us at the number below, or send us an email with your question and we can help you figure this all out.</h2>
 						<h4><i class="fa fa-home fa"></i> Boston, MA | San Jose, Costa Rica></h4>
 					
 						<h4><i class="fa fa-phone fa"></i> +1 617 470 7125</h4>
 					
-						<h4><i class="fa fa-envelope fa"></i> rrojas@rgbconsultinggroup.com</h4>
+						<h4><i class="fa fa-envelope fa"></i> jboyarsky@rgbconsultinggroup.com</h4>
 			<br></br>
 			</div>
 		</div> 
