--- a/goods.html
+++ b/goods.html
@@ -64,18 +64,37 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3"><FONT COLOR="#000000">Classify Your Collateral</h1>
-      <h2>Article 9 of the UCC has different rules for different types of collateral. That's why it's very important to figure out exactly what your collateral is defined to be according to Article 9.</h2>
-      <a href="about.html" class="btn btn-primary btn-lg">Find out more about our who we are.</a>
+      <h1 class="display-3"><FONT COLOR="#000000">Goods</h1>
+      <h2>You believe you may have Goods. Goods fall into four categories under Article 9: Farm Products, Inventory, Consumer Goods, and Equipment. Let's find out which category your collateral falls into.</h2>
     </header>
-
-  <div id="mission">
+<div class="services">
+    <div class = id "mission">
     <div class="container">
-      <div class="text-left">
-        <h2>Which of these does your collateral sound most like?</h2>
+      <div class="text-center">
+        <h2>Our Strengths</h2>
+      </div>
+      <div class="col-md-3">
+        <i class="fas fa-carrot"></i>
+        <h3>Farm Products</h3>
+        <p>For your collateral to be Farm Products, the debtor must be engaged in a farming operation. If this is true, click on Farm Products to read the full definition according to Article 9 of the UCC.</p>
+      </div>
+      <div class="col-md-3">
+        <i class="fa fa-docker"></i>
+        <h3>Inventory</h3>
+        <p>Are your goods sold or to be sold, or leased, or to be leased. If they are, click on Inventory to read the full definition according to Article 9 of the UCC.</p>
+      </div>
+      <div class="col-md-3">
+        <i class="fa fa-couch"></i>  
+        <h3>Consumer Goods</h3>
+        <p>If you use your goods in your home or for personal uses, you may have Consumer Goods. This often includes your TV, your refrigerator, your couch, and other household goods. If you think they are, click on Consumer Goods to read the full definition according Article 9 of the UCC.</p>
+      </div>
+      <div class="col-md-3">
+        <i class="fa fa-gear"></i>  
+        <h3>Equipment</h3>
+        <p>If your collateral doesn't fall into any of these categories, it may be Equipment. Unfortunately, this is a residual category of classification, meaning that it is everything that is left over. It may be a good idea to read the definitions below to make sure your collateral isn't Farm Products, Inventory, or Consumer Goods.</p>
       </div>
     </div>
-  </div>
+    </div>      
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
