--- a/goods.html
+++ b/goods.html
@@ -75,7 +75,7 @@
       </div>
       <div class="col-md-3">
         <i class="fas fa-carrot"></i>
-        <h3>Farm Products</h3>
+       <a href="#farmproducts.html" class="btn btn-primary">Farm Products</a>
         <p>For your collateral to be Farm Products, the debtor must be engaged in a farming operation. If this is true, click on Farm Products to read the full definition according to Article 9 of the UCC.</p>
       </div>
       <div class="col-md-3">
@@ -96,60 +96,52 @@
     </div>
     </div>      
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h4 class="card-title">It's a physical thing that I can move.</h4>
-            <p class="card-text">Can you touch it? Can you move it without causing serious damage? If you answered yes to either or both of these questions, your collateral probably falls into the category of Goods</p>
-          </div>
-          <div class="card-footer">
-            <a href="goods.html" class="btn btn-primary">I think I might have Goods.</a>
-          </div>
-           <div class="card-footer">
-            <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
-          </div>
-        </div>
+  <div id="farmproducts">
+    <div class="container">
+      <div class="text-left">
+        <h3>(34) "Farm products" means goods, other than standing timber, with respect to which the debtor is engaged in a farming operation and which are: (A) crops grown, growing, or to be grown, including: (i) crops produced on trees, vines, and bushes; and (ii) aquatic goods produced in aquacultural operations; (B) livestock, born or unborn, including aquatic goods produced in aquacultural operations; (C) supplies used or produced in a farming operation; or (D) products of crops or livestock in their unmanufactured states.</h3>
+        <br></br>
+        <h3> And just so you have the definition of Farming Operation.      (35) "Farming operation" means raising, cultivating, propagating, fattening, grazing, or any other farming, livestock, or aquacultural operation.</h3>
+        <br></br>
       </div>
-
-
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h4 class="card-title">It's a physical thing, but I can't really move it.</h4>
-            <p class="card-text">If it is a house, or something that can't be moved without causing damage, it's probably a Fixture. If it is more similar to a to a mineral in the ground like oil, rare earth metals, then you might have what article 9 calls "as-extracted collateral" </p>
-          </div>
-          <div class="card-footer">
-            <a href="case2.html" class="btn btn-primary">I think it might be a fixture</a>
-          </div>
-           <div class="card-footer">
-           <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
-          </div>
-        </div>
-      </div>
-
-
-     <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <div class="card-body">
-            <h4 class="card-title">It's intanigble</h4>
-            <p class="card-text">It's not really something I can hold or move. It may be a right to a good or a right to a payment. It may be a software or intellectual property.</p>
-          </div>
-          <div class="card-footer">
-            <a href="case3.html" class="btn btn-primary">That sounds like me.</a>
-          </div>
-           <div class="card-footer">
-      <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
-          </div>
-        </div>
-      </div>  
-   
-
     </div>
-    <!-- /.row -->
-
   </div>
-  <!-- /.container -->
+  <div id="farmproducts">
+    <div class="container">
+      <div class="text-left">
+        <h3>Inventory</h3>
+        <br></br>
+        <h3> And just so you have the definition of Farming Operation.      (35) "Farming operation" means raising, cultivating, propagating, fattening, grazing, or any other farming, livestock, or aquacultural operation.</h3>
+        <br></br>
+      </div>
+    </div>
+  </div>
+  <div id="inventory">
+    <div class="container">
+      <div class="text-left">
+        <h3>(48) "Inventory" means goods, other than farm products, which: (A) are leased by a person as lessor; (B) are held by a person for sale or lease or to be furnished under a contract of service; (C) are furnished by a person under a contract of service; or (D) consist of raw materials, work in process, or materials used or consumed in a business.</h3>
+        <br></br>
+      </div>
+    </div>
+  </div>
+    <div id="consumergoods">
+    <div class="container">
+      <div class="text-left">
+        <h3>(23) "Consumer goods" means goods that are used or bought for use primarily for personal, family, or household purposes.</h3>
+        <br></br>
+      </div>
+    </div>
+  </div>
+   <div id="equipment">
+    <div class="container">
+      <div class="text-left">
+        <h3>(33) "Equipment" means goods other than inventory, farm products, or consumer goods.</h3>
+        <br></br>
+      </div>
+    </div>
+  </div>
+
+
 
   <!-- Footer -->
   <footer class="py-5 bg-dark">
