--- a/goods.html
+++ b/goods.html
@@ -69,28 +69,22 @@
     </header>
 <div class="services">
     <div class = id "mission">
-    <div class="container">
-      <div class="text-center">
-        <h2>Our Strengths</h2>
-      </div>
       <div class="col-md-3">
-        <i class="fas fa-carrot"></i>
-       <a href="#farmproducts.html" class="btn btn-primary">Farm Products</a>
+        <i class="fa fa-carrot"></i>
+       <a href="#farmproducts" class="btn btn-primary">Farm Products</a>
         <p>For your collateral to be Farm Products, the debtor must be engaged in a farming operation. If this is true, click on Farm Products to read the full definition according to Article 9 of the UCC.</p>
       </div>
       <div class="col-md-3">
         <i class="fa fa-docker"></i>
-        <h3>Inventory</h3>
+     <a href="#inventory" class="btn btn-primary">Inventory</a>
         <p>Are your goods sold or to be sold, or leased, or to be leased. If they are, click on Inventory to read the full definition according to Article 9 of the UCC.</p>
       </div>
       <div class="col-md-3">
-        <i class="fa fa-couch"></i>  
-        <h3>Consumer Goods</h3>
+   <a href="#consumergoods" class="btn btn-primary">Consumer Goods</a>
         <p>If you use your goods in your home or for personal uses, you may have Consumer Goods. This often includes your TV, your refrigerator, your couch, and other household goods. If you think they are, click on Consumer Goods to read the full definition according Article 9 of the UCC.</p>
       </div>
       <div class="col-md-3">
-        <i class="fa fa-gear"></i>  
-        <h3>Equipment</h3>
+   <a href="#inventory" class="btn btn-primary">Equipment</a>
         <p>If your collateral doesn't fall into any of these categories, it may be Equipment. Unfortunately, this is a residual category of classification, meaning that it is everything that is left over. It may be a good idea to read the definitions below to make sure your collateral isn't Farm Products, Inventory, or Consumer Goods.</p>
       </div>
     </div>
@@ -99,42 +93,33 @@
   <div id="farmproducts">
     <div class="container">
       <div class="text-left">
+        <h1>Definitions</h1>
+        <h2>Farm Products</h2>
         <h3>(34) "Farm products" means goods, other than standing timber, with respect to which the debtor is engaged in a farming operation and which are: (A) crops grown, growing, or to be grown, including: (i) crops produced on trees, vines, and bushes; and (ii) aquatic goods produced in aquacultural operations; (B) livestock, born or unborn, including aquatic goods produced in aquacultural operations; (C) supplies used or produced in a farming operation; or (D) products of crops or livestock in their unmanufactured states.</h3>
-        <br></br>
         <h3> And just so you have the definition of Farming Operation.      (35) "Farming operation" means raising, cultivating, propagating, fattening, grazing, or any other farming, livestock, or aquacultural operation.</h3>
-        <br></br>
-      </div>
-    </div>
-  </div>
-  <div id="farmproducts">
-    <div class="container">
-      <div class="text-left">
-        <h3>Inventory</h3>
-        <br></br>
-        <h3> And just so you have the definition of Farming Operation.      (35) "Farming operation" means raising, cultivating, propagating, fattening, grazing, or any other farming, livestock, or aquacultural operation.</h3>
-        <br></br>
       </div>
     </div>
   </div>
   <div id="inventory">
     <div class="container">
       <div class="text-left">
+    <h2>Inventory</h2>
         <h3>(48) "Inventory" means goods, other than farm products, which: (A) are leased by a person as lessor; (B) are held by a person for sale or lease or to be furnished under a contract of service; (C) are furnished by a person under a contract of service; or (D) consist of raw materials, work in process, or materials used or consumed in a business.</h3>
-        <br></br>
       </div>
     </div>
   </div>
     <div id="consumergoods">
     <div class="container">
       <div class="text-left">
+        <h2>Consumer Goods</h2>
         <h3>(23) "Consumer goods" means goods that are used or bought for use primarily for personal, family, or household purposes.</h3>
-        <br></br>
       </div>
     </div>
   </div>
    <div id="equipment">
     <div class="container">
       <div class="text-left">
+        <h2>Equipment</h2>
         <h3>(33) "Equipment" means goods other than inventory, farm products, or consumer goods.</h3>
         <br></br>
       </div>
