--- a/fixtures.html
+++ b/fixtures.html
@@ -64,30 +64,16 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3"><FONT COLOR="#000000">Goods</h1>
-      <h2>You believe you may have Goods. Goods fall into four categories under Article 9: Farm Products, Inventory, Consumer Goods, and Equipment. Let's find out which category your collateral falls into.</h2>
+      <h1 class="display-3"><FONT COLOR="#000000">Fixtures and As-Extracted Collateral</h1>
+      <h2>If you believe you have a fixture or minerals or as extracted collateral, check the UCC Article 9 definitions below.</h2>
     </header>
-<div class="services">
-    <div class = id "mission">
-      <div class="col-md-3">
-        <i class="fa fa-carrot"></i>
-       <a href="#farmproducts" class="btn btn-primary">Farm Products</a>
-        <p><FONT COLOR="#000000">For your collateral to be Farm Products, the debtor must be engaged in a farming operation. If this is true, click on Farm Products to read the full definition according to Article 9 of the UCC.</p>
+<header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Fixtures</h1>
+      <h2>(41) "Fixtures" means goods that have become so related to particular real property that an interest in them arises under real property law.</h2>
+    </header>
+     <h1 class="display-3"><FONT COLOR="#000000">As-Extracted Collateral</h1>
+        <p>(6) "As-extracted collateral" means: (A) oil, gas, or other minerals that are subject to a security interest that: (i) is created by a debtor having an interest in the minerals before extraction; and (ii) attaches to the minerals as extracted; or (B) accounts arising out of the sale at the wellhead or minehead of oil, gas, or other minerals in which the debtor had an interest before extraction.</p>
       </div>
-      <div class="col-md-3">
-        <i class="fa fa-docker"></i>
-     <a href="#inventory" class="btn btn-primary">Inventory</a>
-        <p><FONT COLOR="#000000">Are your goods sold or to be sold, or leased, or to be leased. If they are, click on Inventory to read the full definition according to Article 9 of the UCC.</p>
-      </div>
-      <div class="col-md-3">
-   <a href="#consumergoods" class="btn btn-primary">Consumer Goods</a>
-        <p>If you use your goods in your home or for personal uses, you may have Consumer Goods. This often includes your TV, your refrigerator, your couch, and other household goods. If you think they are, click on Consumer Goods to read the full definition according Article 9 of the UCC.</p>
-      </div>
-      <div class="col-md-3">
-   <a href="#inventory" class="btn btn-primary">Equipment</a>
-        <p>If your collateral doesn't fall into any of these categories, it may be Equipment. Unfortunately, this is a residual category of classification, meaning that it is everything that is left over. It may be a good idea to read the definitions below to make sure your collateral isn't Farm Products, Inventory, or Consumer Goods.</p>
-      </div>
-    </div>
     </div>      
 
   <div id="farmproducts">
