--- a/classify.html
+++ b/classify.html
@@ -101,7 +101,7 @@
             <p class="card-text">If it is a house, or something that can't be moved without causing damage, it's probably a Fixture. If it is more similar to a to a mineral in the ground like oil, rare earth metals, then you might have what article 9 calls "as-extracted collateral" </p>
           </div>
           <div class="card-footer">
-            <a href="case2.html" class="btn btn-primary">I think it might be a fixture</a>
+            <a href="fixtures.html" class="btn btn-primary">I think it might be a fixture</a>
           </div>
            <div class="card-footer">
            <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
@@ -113,7 +113,7 @@
      <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
           <div class="card-body">
-            <h4 class="card-title">It's intanigble</h4>
+            <h4 class="card-title">It's intangible</h4>
             <p class="card-text">It's not really something I can hold or move. It may be a right to a good or a right to a payment. It may be a software or intellectual property.</p>
           </div>
           <div class="card-footer">
@@ -135,7 +135,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="text-center text-white">Copyright &copy; Your Website 2019</p>
     </div>
     <!-- /.container -->
   </footer>
