--- a/fixtures.html
+++ b/fixtures.html
@@ -71,8 +71,10 @@
       <h1 class="display-3"><FONT COLOR="#000000">Fixtures</h1>
       <h2>(41) "Fixtures" means goods that have become so related to particular real property that an interest in them arises under real property law.</h2>
     </header>
+    <header class="jumbotron my-4">
      <h1 class="display-3"><FONT COLOR="#000000">As-Extracted Collateral</h1>
         <p>(6) "As-extracted collateral" means: (A) oil, gas, or other minerals that are subject to a security interest that: (i) is created by a debtor having an interest in the minerals before extraction; and (ii) attaches to the minerals as extracted; or (B) accounts arising out of the sale at the wellhead or minehead of oil, gas, or other minerals in which the debtor had an interest before extraction.</p>
+      </header>
       </div>
     </div>      
 
