--- a/goods.html
+++ b/goods.html
@@ -94,33 +94,42 @@
     <div class="container">
       <div class="text-left">
         <h1>Definitions</h1>
-        <h2>Farm Products</h2>
-        <h3>(34) "Farm products" means goods, other than standing timber, with respect to which the debtor is engaged in a farming operation and which are: (A) crops grown, growing, or to be grown, including: (i) crops produced on trees, vines, and bushes; and (ii) aquatic goods produced in aquacultural operations; (B) livestock, born or unborn, including aquatic goods produced in aquacultural operations; (C) supplies used or produced in a farming operation; or (D) products of crops or livestock in their unmanufactured states.</h3>
-        <h3> And just so you have the definition of Farming Operation.      (35) "Farming operation" means raising, cultivating, propagating, fattening, grazing, or any other farming, livestock, or aquacultural operation.</h3>
+        <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Farm Products</h1>
+      <h2>(34) "Farm products" means goods, other than standing timber, with respect to which the debtor is engaged in a farming operation and which are: (A) crops grown, growing, or to be grown, including: (i) crops produced on trees, vines, and bushes; and (ii) aquatic goods produced in aquacultural operations; (B) livestock, born or unborn, including aquatic goods produced in aquacultural operations; (C) supplies used or produced in a farming operation; or (D) products of crops or livestock in their unmanufactured states.</h2>
+    </header>
+        <h3> And just so you have the definition of Farming Operation. (35) "Farming operation" means raising, cultivating, propagating, fattening, grazing, or any other farming, livestock, or aquacultural operation.</h3>
+         </header>
       </div>
     </div>
   </div>
   <div id="inventory">
     <div class="container">
       <div class="text-left">
-    <h2>Inventory</h2>
-        <h3>(48) "Inventory" means goods, other than farm products, which: (A) are leased by a person as lessor; (B) are held by a person for sale or lease or to be furnished under a contract of service; (C) are furnished by a person under a contract of service; or (D) consist of raw materials, work in process, or materials used or consumed in a business.</h3>
+ <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Inventory</h1>
+        <h2>(48) "Inventory" means goods, other than farm products, which: (A) are leased by a person as lessor; (B) are held by a person for sale or lease or to be furnished under a contract of service; (C) are furnished by a person under a contract of service; or (D) consist of raw materials, work in process, or materials used or consumed in a business.</h2>
+         </header>
       </div>
     </div>
   </div>
     <div id="consumergoods">
     <div class="container">
       <div class="text-left">
-        <h2>Consumer Goods</h2>
-        <h3>(23) "Consumer goods" means goods that are used or bought for use primarily for personal, family, or household purposes.</h3>
+        <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Consumer Goods</h1>
+        <h2>(23) "Consumer goods" means goods that are used or bought for use primarily for personal, family, or household purposes.</h2>
+         </header>
       </div>
     </div>
   </div>
    <div id="equipment">
     <div class="container">
       <div class="text-left">
-        <h2>Equipment</h2>
-        <h3>(33) "Equipment" means goods other than inventory, farm products, or consumer goods.</h3>
+  <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Equipment</h1>
+        <h2>(33) "Equipment" means goods other than inventory, farm products, or consumer goods.</h2>
+         </header>
         <br></br>
       </div>
     </div>
