--- a/about.html
+++ b/about.html
@@ -47,10 +47,9 @@
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation"><a href="index.html" class="active">Home</a></li>
-						    <li role="presentation"><a href="litigationinvesting.html">Litigation Investing</a></li>
-							<li role="presentation"><a href="index.html#mission">Mission Statement</a></li>
-							<li role="presentation"><a href="services.html">Business Services</a></li>
+							<li role="presentation"><a href="index.html">Secured Transactions</a></li>
+							<li role="presentation"><a href="#mission">Mission Statement</a></li>
+							<li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
@@ -65,7 +64,7 @@
 			<div class="text-center">
 				<h2>Our Story</h2>
 				<div class="col-md-10 col-md-offset-1">
-					<p>We believe that learning and applying the law should be a lot easier than it currently is. We have practice aids for lawyers, law students, and scholars who wish to better understand part of the law.
+					<p><FONT COLOR="#000000">We believe that learning and applying the law should be a lot easier than it currently is. We have practice aids for lawyers, law students, and scholars who wish to better understand part of the law.
 						<br><br></br></br>
 				</div>
 		
@@ -77,7 +76,7 @@
 			<div class="text-center">
 				<h2>Who We Are</h2>
 				<div class="col-md-10 col-md-offset-1">
-					<p>We are a group of lawyers, legal scholars, and computer scientists who build software to enable lawyers and educators. We combine the best legal thinkers with the best coders to facilitate legal practice and legal education.
+					<p><FONT COLOR="#000000">We are a group of lawyers, legal scholars, and computer scientists who build software to enable lawyers and educators. We combine the best legal thinkers with the best coders to facilitate legal practice and legal education.
 						<br><br></br></br>
 				</div>
 				<br>
