--- a/classify.html
+++ b/classify.html
@@ -48,11 +48,10 @@
           <div class="menu">
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation"><a href="index.html">Secured Transactions</a></li>
-                     <li role="presentation"><a href="litigationinvesting.html">Litigation Investing</a></li>
               <li role="presentation"><a href="#mission">Mission Statement</a></li>
               <li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
               <li role="presentation"><a href="about.html">About Us</a></li>
-              <li role="presentation"><a href="contact.html">Contact</a></li>           
+              <li role="presentation"><a href="contact.html">Contact</a></li>          
             </ul>
           </div>
         </div>    
@@ -77,7 +76,7 @@
     </div>
   </div>
 
-      <div class="col-lg-3 col-md-6 mb-4">
+      <div class="col-lg-3 col-md-8 mb-4">
         <div class="card h-100">
           <div class="card-body">
             <h4 class="card-title">It's a physical thing that I can move.</h4>
@@ -95,7 +94,7 @@
 
 
       <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
+        <div class="card h-150">
           <div class="card-body">
             <h4 class="card-title">It's a physical thing, but I can't really move it.</h4>
             <p class="card-text">If it is a house, or something that can't be moved without causing damage, it's probably a Fixture. If it is more similar to a to a mineral in the ground like oil, rare earth metals, then you might have what article 9 calls "as-extracted collateral" </p>
@@ -110,14 +109,14 @@
       </div>
 
 
-     <div class="col-lg-3 col-md-6 mb-4">
+     <div class="col-lg-4 col-md-6 mb-4">
         <div class="card h-100">
           <div class="card-body">
             <h4 class="card-title">It's intangible</h4>
             <p class="card-text">It's not really something I can hold or move. It may be a right to a good or a right to a payment. It may be a software or intellectual property.</p>
           </div>
           <div class="card-footer">
-            <a href="case3.html" class="btn btn-primary">That sounds like me.</a>
+            <a href="intangibles.html" class="btn btn-primary">That sounds like me.</a>
           </div>
            <div class="card-footer">
       <a href="contact.html" class="btn btn-primary">I'm not sure I'd like to know more.</a>
