--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,11 @@
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation"><a href="index.html">Home</a></li>
-            			    <li role="presentation"><a href="litigationinvesting.html">Litigation Investing</a></li>
-							<li role="presentation"><a href="index.html#mission">Mission Statement</a></li>
-							<li role="presentation"><a href="services.html">Business Services</a></li>
-							<li role="presentation"><a href="about.html">About Us</a></li>
-							<li role="presentation"><a href="contact.html">Contact</a></li>						
+							<li role="presentation"><a href="index.html">Secured Transactions</a></li>
+                            <li role="presentation"><a href="#mission">Mission Statement</a></li>
+                            <li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
+                            <li role="presentation"><a href="about.html">About Us</a></li>
+                            <li role="presentation"><a href="contact.html">Contact</a></li>     				
 						</ul>
 					</div>
 				</div>		
@@ -64,6 +63,8 @@
 				<h2>Contact Us</h2>				
 				<br></br>
                 <h2>We realize a lot of these questions are difficult, so we have lawyers standing by to help. You can call us at the number below, or send us an email with your question and we can help you figure this all out.</h2>
+                <br>
+            </br>
 						<h4><i class="fa fa-home fa"></i> Boston, MA | San Jose, Costa Rica></h4>
 					
 						<h4><i class="fa fa-phone fa"></i> +1 617 470 7125</h4>
