--- a/goods.html
+++ b/goods.html
@@ -48,11 +48,10 @@
           <div class="menu">
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation"><a href="index.html">Secured Transactions</a></li>
-                     <li role="presentation"><a href="litigationinvesting.html">Litigation Investing</a></li>
               <li role="presentation"><a href="#mission">Mission Statement</a></li>
               <li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
               <li role="presentation"><a href="about.html">About Us</a></li>
-              <li role="presentation"><a href="contact.html">Contact</a></li>           
+              <li role="presentation"><a href="contact.html">Contact</a></li>       
             </ul>
           </div>
         </div>    
@@ -81,11 +80,11 @@
       </div>
       <div class="col-md-3">
    <a href="#consumergoods" class="btn btn-primary">Consumer Goods</a>
-        <p>If you use your goods in your home or for personal uses, you may have Consumer Goods. This often includes your TV, your refrigerator, your couch, and other household goods. If you think they are, click on Consumer Goods to read the full definition according Article 9 of the UCC.</p>
+        <p><FONT COLOR="#000000">If you use your goods in your home or for personal uses, you may have Consumer Goods. This often includes your TV, your refrigerator, your couch, and other household goods. If you think they are, click on Consumer Goods to read the full definition according Article 9 of the UCC.</p>
       </div>
       <div class="col-md-3">
-   <a href="#inventory" class="btn btn-primary">Equipment</a>
-        <p>If your collateral doesn't fall into any of these categories, it may be Equipment. Unfortunately, this is a residual category of classification, meaning that it is everything that is left over. It may be a good idea to read the definitions below to make sure your collateral isn't Farm Products, Inventory, or Consumer Goods.</p>
+   <a href="#equipment" class="btn btn-primary">Equipment</a>
+        <p><FONT COLOR="#000000">If your collateral doesn't fall into any of these categories, it may be Equipment. Unfortunately, this is a residual category of classification, meaning that it is everything that is left over. It may be a good idea to read the definitions below to make sure your collateral isn't Farm Products, Inventory, or Consumer Goods.</p>
       </div>
     </div>
     </div>      
@@ -97,8 +96,8 @@
         <header class="jumbotron my-4">
       <h1 class="display-3"><FONT COLOR="#000000">Farm Products</h1>
       <h2>(34) "Farm products" means goods, other than standing timber, with respect to which the debtor is engaged in a farming operation and which are: (A) crops grown, growing, or to be grown, including: (i) crops produced on trees, vines, and bushes; and (ii) aquatic goods produced in aquacultural operations; (B) livestock, born or unborn, including aquatic goods produced in aquacultural operations; (C) supplies used or produced in a farming operation; or (D) products of crops or livestock in their unmanufactured states.</h2>
-    </header>
         <h3> And just so you have the definition of Farming Operation. (35) "Farming operation" means raising, cultivating, propagating, fattening, grazing, or any other farming, livestock, or aquacultural operation.</h3>
+        <a href="#container" class="btn btn-primary">Back to Top</a>
          </header>
       </div>
     </div>
@@ -109,6 +108,7 @@
  <header class="jumbotron my-4">
       <h1 class="display-3"><FONT COLOR="#000000">Inventory</h1>
         <h2>(48) "Inventory" means goods, other than farm products, which: (A) are leased by a person as lessor; (B) are held by a person for sale or lease or to be furnished under a contract of service; (C) are furnished by a person under a contract of service; or (D) consist of raw materials, work in process, or materials used or consumed in a business.</h2>
+          <a href="#container" class="btn btn-primary">Back to Top</a>
          </header>
       </div>
     </div>
@@ -119,6 +119,7 @@
         <header class="jumbotron my-4">
       <h1 class="display-3"><FONT COLOR="#000000">Consumer Goods</h1>
         <h2>(23) "Consumer goods" means goods that are used or bought for use primarily for personal, family, or household purposes.</h2>
+          <a href="#container" class="btn btn-primary">Back to Top</a>
          </header>
       </div>
     </div>
@@ -129,6 +130,7 @@
   <header class="jumbotron my-4">
       <h1 class="display-3"><FONT COLOR="#000000">Equipment</h1>
         <h2>(33) "Equipment" means goods other than inventory, farm products, or consumer goods.</h2>
+          <a href="#container" class="btn btn-primary">Back to Top</a>
          </header>
         <br></br>
       </div>
