--- a/intangibles.html
+++ b/intangibles.html
@@ -51,7 +51,7 @@
               <li role="presentation"><a href="#mission">Mission Statement</a></li>
               <li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
               <li role="presentation"><a href="about.html">About Us</a></li>
-              <li role="presentation"><a href="contact.html">Contact</a></li>            
+              <li role="presentation"><a href="contact.html">Contact</a></li>       
             </ul>
           </div>
         </div>    
@@ -63,51 +63,70 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3"><FONT COLOR="#000000">Fixtures and As-Extracted Collateral</h1>
-      <h2>If you believe you have a fixture or minerals or as extracted collateral, check the UCC Article 9 definitions below.</h2>
+      <h1 class="display-3"><FONT COLOR="#000000">Intangibles</h1>
+      <h2>If your collateral isn't a physical thing, it likely falls into the category of intangible. There are many intangibles and it is often hard to figure out exactly what your collateral is. Hopefully your collateral falls into one of the categories below.</h2>
     </header>
-<header class="jumbotron my-4">
-      <h1 class="display-3"><FONT COLOR="#000000">Fixtures</h1>
-      <h2>(41) "Fixtures" means goods that have become so related to particular real property that an interest in them arises under real property law.</h2>
-    </header>
-    <header class="jumbotron my-4">
-     <h1 class="display-3"><FONT COLOR="#000000">As-Extracted Collateral</h1>
-        <h2><FONT COLOR="#000000">(6) "As-extracted collateral" means: (A) oil, gas, or other minerals that are subject to a security interest that: (i) is created by a debtor having an interest in the minerals before extraction; and (ii) attaches to the minerals as extracted; or (B) accounts arising out of the sale at the wellhead or minehead of oil, gas, or other minerals in which the debtor had an interest before extraction.</h2>
-      </header>
+<div class="services">
+    <div class = id "mission">
+      <div class="col-md-3">
+        <i class="fa fa-carrot"></i>
+       <a href="paymentrights.html" class="btn btn-primary">Right to Payment</a>
+        <p><FONT COLOR="#000000">If your collateral is a right to a payment it will be more difficult to define. Click on the link for additional understanding surrounding what your right to payment is define as.</p>
       </div>
+      <div class="col-md-3">
+        <i class="fa fa-docker"></i>
+     <a href="#ctc" class="btn btn-primary">Commercial Tort Claim</a>
+        <p><FONT COLOR="#000000">If you have a right to a commercial tort claim, check the definition below to make sure.</p>
+      </div>
+      <div class="col-md-3">
+   <a href="#investmentproperty" class="btn btn-primary">Investment Property</a>
+        <p><FONT COLOR="#000000">An investment property is often stocks or bonds. Check the definiiton below to make sure.</p>
+      </div>
+      <div class="col-md-3">
+   <a href="#loc" class="btn btn-primary">Letter-of-Credit Rights</a>
+        <p><FONT COLOR="#000000">Letter-of-credit rights entitle the beneificary to gey payment on demand. It has a pretty specific definition, so check below to make sure.</p>
+      </div>
+    </div>
     </div>      
 
-  <div id="farmproducts">
+  <div id="ctc">
     <div class="container">
       <div class="text-left">
         <h1>Definitions</h1>
-        <h2>Farm Products</h2>
-        <h3>(34) "Farm products" means goods, other than standing timber, with respect to which the debtor is engaged in a farming operation and which are: (A) crops grown, growing, or to be grown, including: (i) crops produced on trees, vines, and bushes; and (ii) aquatic goods produced in aquacultural operations; (B) livestock, born or unborn, including aquatic goods produced in aquacultural operations; (C) supplies used or produced in a farming operation; or (D) products of crops or livestock in their unmanufactured states.</h3>
-        <h3> And just so you have the definition of Farming Operation.      (35) "Farming operation" means raising, cultivating, propagating, fattening, grazing, or any other farming, livestock, or aquacultural operation.</h3>
+        <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Commercial Tort Claim</h1>
+      <h2>(13) "Commercial tort claim" means a claim arising in tort with respect to which: (A) the claimant is an organization; or (B) the claimant is an individual and the claim: (i) arose in the course of the claimant's business or profession; and (ii) does not include damages arising out of personal injury to or the death of an individual.</h2>
+         </header>
       </div>
     </div>
   </div>
-  <div id="inventory">
+  <div id="investmentproperty">
     <div class="container">
       <div class="text-left">
-    <h2>Inventory</h2>
-        <h3>(48) "Inventory" means goods, other than farm products, which: (A) are leased by a person as lessor; (B) are held by a person for sale or lease or to be furnished under a contract of service; (C) are furnished by a person under a contract of service; or (D) consist of raw materials, work in process, or materials used or consumed in a business.</h3>
+ <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Investment Propertyy</h1>
+        <h2>(49) "Investment property" means a security, whether certificated or uncertificated, security entitlement, securities account, commodity contract, or commodity account.</h2>
+         </header>
       </div>
     </div>
   </div>
-    <div id="consumergoods">
+    <div id="loc">
     <div class="container">
       <div class="text-left">
-        <h2>Consumer Goods</h2>
-        <h3>(23) "Consumer goods" means goods that are used or bought for use primarily for personal, family, or household purposes.</h3>
+        <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Letter-of-Credit Rights</h1>
+        <h2>(51) "Letter-of-credit right" means a right to payment or performance under a letter of credit, whether or not the beneficiary has demanded or is at the time entitled to demand payment or performance. The term does not include the right of a beneficiary to demand payment or performance under a letter of credit.</h2>
+         </header>
       </div>
     </div>
   </div>
    <div id="equipment">
     <div class="container">
       <div class="text-left">
-        <h2>Equipment</h2>
-        <h3>(33) "Equipment" means goods other than inventory, farm products, or consumer goods.</h3>
+  <header class="jumbotron my-4">
+      <h1 class="display-3"><FONT COLOR="#000000">Equipment</h1>
+        <h2>(33) "Equipment" means goods other than inventory, farm products, or consumer goods.</h2>
+         </header>
         <br></br>
       </div>
     </div>
