--- a/goods.html
+++ b/goods.html
@@ -59,7 +59,7 @@
         </nav><!--/nav-->   
     </header><!--/header--> 
   <!-- Page Content -->
-  <div class="container">
+  <div class="#container">
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
