--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
 <div class="container">
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<i class="fa fa-book"></i>
-					<h3>Classify Your Collateral</h3>
+					<h3>1. Classify Your Collateral</h3>
 					<p>Article 9 uses specific and counerintuitive words and definitions. We can help you figure out exactly what it is your trying to use as collateral.</p>
 				</div>
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
 					<i class="fa fa-paperclip"></i>
-					<h3>Create Your Security Agreement</h3>
+					<h3>2. Create Your Security Agreement</h3>
 					<p>Once you've classified your collateral, you have to make sure that you have a security agreement and that your collateral attaches to the security agreement. This makes it clear what exactly you have used as collateral.</p>
 				</div>
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
-					<h3>Perfecting Your Security Interest</h3>
+					<h3>3. Perfecting Your Security Interest</h3>
 					<p>Once you've classified your collateral and attached it, you need to make sure that your interest is perfected. If it is perfected, this will give you the best chance of ensuring that it is enforceable in the case of bankruptcy.</p>
 				</div>
 			</div>
