--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 				</div>
 				<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
-					<h3>3. Perfecting Your Security Interest</h3>
+					<h3>3. Perfect Your Security Interest</h3>
 					<p>Once you've classified your collateral and attached it, you need to make sure that your interest is perfected. If it is perfected, this will give you the best chance of ensuring that it is enforceable in the case of bankruptcy.</p>
 				</div>
 			</div>
