--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                         <span class="icon-bar"></span>
                     </button>
                    <div class="navbar-brand">
-						<a href="index.html"><h1>RGB Consulting Group</h1></a>
+						<a href="index.html"><h1>Codified</h1></a>
 					</div>
                 </div>				
                 <div class="navbar-collapse collapse">							
