--- a/intangibles.html
+++ b/intangibles.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>RGB Consulting Group</title>
+    <title>Codified</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -104,7 +104,7 @@
     <div class="container">
       <div class="text-left">
  <header class="jumbotron my-4">
-      <h1 class="display-3"><FONT COLOR="#000000">Investment Propertyy</h1>
+      <h1 class="display-3"><FONT COLOR="#000000">Investment Property</h1>
         <h2>(49) "Investment property" means a security, whether certificated or uncertificated, security entitlement, securities account, commodity contract, or commodity account.</h2>
          </header>
       </div>
