--- a/paymentrights.html
+++ b/paymentrights.html
@@ -88,7 +88,9 @@
       </div>
     </div>
     </div>      
-
+  <br {
+        line-height: 150%;
+     }></br>
   <div id="chattelpaper">
     <div class="container">
       <div class="text-left">
