--- a/intangibles.html
+++ b/intangibles.html
@@ -48,7 +48,7 @@
           <div class="menu">
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation"><a href="index.html">Secured Transactions</a></li>
-              <li role="presentation"><a href="#mission">Mission Statement</a></li>
+         <li role="presentation"><a href="experiment.html">Mission Statement</a></li>
               <li role="presentation"><a href="classify.html">Classify Your Collateral</a></li>
               <li role="presentation"><a href="about.html">About Us</a></li>
               <li role="presentation"><a href="contact.html">Contact</a></li>       
