--- a/experiment.html
+++ b/experiment.html
@@ -27,6 +27,9 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-123150229-1');
+  function myFunction() {
+  document.getElementById("demo").innerHTML = "Paragraph changed.";
+}
 </script>
   </head>
   <body>	
@@ -63,6 +66,10 @@
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time.</button>
+
+<p id="demo">A Paragraph.</p>
+
+<button type="button" onclick="myFunction()">Try it</button>
 
 <p id="demo"></p>
 	<div class="container">
