--- a/experiment.html
+++ b/experiment.html
@@ -63,7 +63,7 @@
     </header><!--/header-->	
     <h2>My First JavaScript</h2>
 
-<button type="button"
+<!--<button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time.</button>
 
@@ -84,7 +84,7 @@ function myFunction() {
 }
 </script>
 
-
+-->
 <p id="demo"></p>
 	<div class="container">
 			<div class="col-md-10 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
